# rw_xarm

rw/: package.xml  setup.py
rw/config/: gz_bridge.yaml  ros2_controllers.yaml
rw/launch/: _robot_on_rwbot_gz.launch.py  corrected_waypoint_navigation.launch.py  spawner.launch copy.py  spawner.launch.py
rw/maps/: alpha_shape_nav2_map.pgm  alpha_shape_nav2_map.yaml
rw/model/: robot.xacro
rw/robot_meshes/: back_camera.dae  back_camera.stl  base_link.dae  base_link.stl  front_camera.dae  front_camera.stl  front_lidar.dae  front_lidar.stl  left_casterWheel.dae  left_casterWheel.stl  left_wheel.dae  left_wheel.stl  panAndTile_kit.dae  panAndTile_kit.stl  right_casterWheel.dae  right_casterWheel.stl  right_wheel.dae  right_wheel.stl  top_lidar.dae  top_lidar.stl
rw/rviz/: moveit copy 2.rviz  moveit.rviz  navigation.rviz
rw/urdf/: robot.xacro  rwbot_with_xarm.urdf.xacro
rw/worlds/: pipeline_generated.world
rw/worlds/pipeline_road_model/: final_cut_road_model.mtl
rw_interfaces/: CMakeLists.txt  package.xml
rw_interfaces/action/: Manipulate.action
rw_interfaces/msg/: NavigationStatus.msg  ProximityStatus.msg
rw_interfaces/srv/: ControlNavigation.srv  GetWaypoints.srv  SetWaypoints.srv
rw_py/: package.xml  setup.cfg  setup.py
rw_py/rw_py/: fake_poses.py  follow_waypoints.py  fusion_visualizer_node.py  goal_calculator_node.py  image_segmenter_node.py  manipulation_action_server.py  pointcloud_fuser_node.py  proximity_monitor.py  waypoint_server.py  waypoint_visualizer.py
trajectory_server/: package.xml  setup.py
xarm_moveit_config/srdf/: _xarm6_macro.srdf.xacro
xarm_msgs/: CMakeLists.txt
xarm_msgs/srv/: PlanMultiStraight.srv
