<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rw_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for rw project</description>
  <maintainer email="emad.aldoghry@outlook.com">aldoghry</maintainer>
  <license>MIT</license> <!-- Or your chosen license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- This is crucial for rosidl_generate_interfaces -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend> <!-- If any .msg use std_msgs types like Header -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>