<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rw_py</name>
  <version>1.0.0</version>
  <description>Python nodes </description>
  <maintainer email="aldoghry@isac.rwth-aachen.de">Emad Aldoghry</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend> <!-- For point_cloud2 -->
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> <!-- Often pulled by tf2_ros -->
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
